force-app/main/default/objects/VoiceCall/listViews/BasicQueueAmazon_VoiceCall.listView-meta.xml
<ListView>
    <fullName>BasicQueueAmazon_VoiceCall</fullName>
    <filterScope>Queue</filterScope>
    <label>BasicQueueAmazon</label>
    <queue>BasicQueueAmazon</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>