force-app/main/default/objects/VoiceCall/listViews/Voice_Calls_Custom.listView-meta.xml
<ListView>
    <fullName>Voice_Calls_Custom</fullName>
    <columns>Name</columns>
    <columns>CallType</columns>
    <columns>Caller</columns>
    <columns>RelatedRecord</columns>
    <columns>FromPhoneNumber</columns>
    <columns>CallDisposition</columns>
    <columns>CallStartDateTime</columns>
    <columns>CallResolution</columns>
    <columns>QualityScore</columns>
    <columns>Department__c</columns>
    <columns>CallDurationInSeconds</columns>
    <columns>IVRInput__c</columns>
    <columns>IVRType__c</columns>
    <filterScope>Everything</filterScope>
    <label>CC Voice Calls</label>
</ListView>